# CategoryProject

./: CMakeLists.txt  README.md  main.cpp
ba_request/: Chameleon.cpp  ConfigFile.cpp  amap_city_model.cpp  app_request_api.cpp  ba_request.cpp  company_request_api.cpp  config_reader.cpp  mall_words.cpp  movie_request_api.cpp  music_lysic_request_api.cpp  music_request_api.cpp  qq_music_model.cpp
config/: config.ini
includes/: Chamelon.h  ConfigFile.h  amap_city_model.h  app_request_api.h  ba_request.h  company_request_api.h  config_reader.h  constant.h  douban_api.h  file_io.h  http_error.h  mall_words.h  movie_request_api.h  music_lysic_request_api.h  music_request_api.h  qq_music_model.h  request_api.h  timer_loop.h
